# xaya-roguelike

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  SECURITY.md  SECURITY_Attack_and_Mitigations.md  SETUP.md  channelboard.cpp  channelboard.hpp  combat.cpp  combat.hpp  dungeon.cpp  dungeon.hpp  dungeongame.cpp  dungeongame.hpp  hash.hpp  items.cpp  items.hpp  logic.cpp  logic.hpp  main.cpp  monsters.cpp  monsters.hpp  moveparser.cpp  moveparser.hpp  moveprocessor.cpp  moveprocessor.hpp  pending.cpp  pending.hpp  play.cpp  rpcserver.cpp  rpcserver.hpp  schema.hpp  schema.sql  schema_head.cpp  schema_tail.cpp  schema_test_head.cpp  schema_test_tail.cpp  statejson.cpp  statejson.hpp
devnet/: adversarial_test.py  ai_explorer.py  ai_player.py  channel_daemon.py  frontend_devnet.py  multi_ai_explorer.py  probe_frontend_fields.py  smoke_test.py
docs/: BUG_replay_mismatch.md  SECURITY_Attack_and_Mitigations.md  SETUP.md  STRATEGY_action_proofs.md  segment-lifecycle.md
proto/: dungeonmove.proto  dungeonstate.proto
rpc-stubs/: rog.json
tests/: dungeon_tests.cpp  dungeongame_tests.cpp  gate_traversal_tests.cpp  moveprocessor_tests.cpp  playthrough_test.cpp  schema_tests.cpp  statejson_tests.cpp  testutils.cpp  testutils.hpp
